workspace = { members = [ "vrrp_packet"] }
[package]
name = "failover"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrrp_packet = { path = "vrrp_packet", version = "0.1.0" }
byteorder = "1.5.0"
ipnet = { version = "2.9.0", features = ["serde"]}
log = "0.4.21"
network-interface = "1.1.1"
pnet = "0.34.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple_logger = "4.3.3"
getopts = "0.2"
libc = "0.2.153"
tokio = { version = "1.37.0", features = ["full"]}
tokio-stream = { version = "0.1.15", features = ["full"]}

[lib]
doctest = false
