[package]
name = "failover_vr"
version = "0.4.1"
edition = "2021"
authors = [ "Paul-weqe <paul1tw1@gmail.com>" ]
description = "VRRP implementation library (and binary installation) in Rust."
license = "MIT"
repository = "https://github.com/Paul-weqe/failover"
keywords = [ "vrrp", "network", "RFC", "redundancy" ]
documentation = "https://failover-docs.readthedocs.io/en/latest/install.html#running-as-library-in-rust"


[dependencies]
byteorder = "1.5.0"
ipnet = { version = "2.9.0", features = ["serde"]}
log = "0.4.21"
pnet = "0.33.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
libc = "0.2.153"
tokio = { version = "1.37.0", features = ["full"]}
clap = { version = "4.5.4", features = ["derive"] }
socket2 = "0.5.7"
bytes = "1.7.1"
log4rs = "1.3.0"

[lib]
doctest = false
